--- a/Style/assaingnment.css
+++ b/Style/assaingnment.css
@@ -1,8 +1,9 @@
 /* header section */
 header {
     width: 80%;
-    max-width: 1320px;
-    margin: 50px auto;
+    /* max-width: 1320px; */
+    /* margin: 50px auto; */
+    margin: auto;
 
 }
 
@@ -87,6 +88,7 @@ img {
     width: 802.9px;
     height: 500px;
     flex-shrink: 0;
+    margin-bottom: 120px;
 }
 
 #C {
@@ -106,7 +108,7 @@ section {
     max-width: 1320px;
     margin: 50px auto;
     align-items: center;
-    margin-bottom: 160px;
+    margin-bottom: 120px;
 
 }
 
@@ -135,7 +137,7 @@ section {
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     width: 80%;
     max-width: 1320px;
-    margin: 50px auto;
+    margin: 0px auto;
 
 }
 
@@ -189,7 +191,7 @@ span {
     background: #FFF;
     width: 90%;
     max-width: 1600px;
-    margin: 200px auto;
+    margin: 100px auto;
     width: 1320px;
     height: 482px;
 }
@@ -316,6 +318,7 @@ input {
     max-width: 1320px;
     margin: 50px auto;
     padding-top: 80px;
+    margin-top: 120px;
 }
 
 .Subercibe {
@@ -390,6 +393,10 @@ input {
     font-weight: 300;
 }
 
+.main-holiday-container {
+
+}
+
 .hodiday-container {
     width: 1320px;
     height: 900px;
@@ -397,7 +404,7 @@ input {
     text-align: center;
     font-family: 'Inter', sans-serif;
     width: 80%;
-    max-width: 1320px;
+    /* max-width: 1320px; */
     margin: 50px auto;
 }
 
@@ -456,8 +463,7 @@ input {
     width: 206.841px;
     height: 206.841px;
     right: 300px;
-    top:500px
-
+    top: 500px
 }
 
 .box {
@@ -470,5 +476,9 @@ input {
     display: flex;
     background-image: url("../resources/Rectangle 2.png"), mar;
     justify-content: space-between;
-    
+
+}
+
+.img-div {
+    display: flex;
 }
