--- a/Style/assaingnment.css
+++ b/Style/assaingnment.css
@@ -372,13 +372,11 @@ input {
 }
 
 .portfolio-container {
-    max-width: 1600px;
-    height: 1200px;
+    /* height: 1200px; */
     background-color: white;
     width: 100%;
     margin: 50px auto;
     /* margin-right: 300px; */
-    padding-left: 280px;
 }
 
 .place-button {
